Fixing flash of overflow in header feature sliders

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -139,9 +139,9 @@
       margin: 0;
       z-index: 1;
       width: 100%;
-      background: $brand-main;
-      padding: 65px 0 2em;
       position: absolute;
+      padding: 65px 0 2em;
+      background: $brand-main;
       transform: translateY(-100%);
       transition: transform 0.2s cubic-bezier(1,0.5,0,1);
       &.active {
@@ -287,6 +287,7 @@
       .menu {
         padding: 0;
         background: none;
+        transition: none;
         position: relative;
         @include clearfix();
         transform: translateY(0);
